@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.0.2): do not edit by hand
+# Generated by roxygen2 (4.1.0): do not edit by hand
 
 S3method(normalize,data.frame)
 S3method(normalize,matrix)
@@ -84,6 +84,7 @@ export(makeFileCache)
 export(makeProgressBar)
 export(makeS3Obj)
 export(makeSimpleFileLogger)
+export(mapValues)
 export(messagef)
 export(namedList)
 export(names2)
